cmd/shared/libgogit.h

extern char* GitAuthNewBasicHTTP(char* username, char* password, long long* handleOut);
extern char* GitAuthNewTokenHTTP(char* token, long long* handleOut);
extern char* GitAuthNewSSHKeyFromFile(char* user, char* pemFile, char* password, long long* handleOut);
extern char* GitAuthNewSSHKey(char* user, char* pem, char* password, long long* handleOut);
extern char* GitAuthNewSSHAgent(char* user, long long* handleOut);
extern char* GitAuthNewSSHPassword(char* user, char* password, long long* handleOut);
extern void GitAuthFree(long long handle);
extern char* GitCommitIterNext(long long iterHandle, char** hashOut, char** msgOut, char** authorNameOut, char** authorEmailOut, long long* tsOut, int* eofOut);
extern void GitCommitIterFree(long long iterHandle);
extern char* GitReferenceIterNext(long long iterHandle, char** refNameOut, char** hashOut, int* eofOut);
extern void GitReferenceIterFree(long long iterHandle);
extern void GitCloneOptionsNew(long long* handleOut);
extern char* GitCloneOptionsSetURL(long long handle, char* val);
extern char* GitCloneOptionsSetAuth(long long handle, long long authHandle);
extern char* GitCloneOptionsSetRemoteName(long long handle, char* val);
extern char* GitCloneOptionsSetReferenceName(long long handle, char* val);
extern char* GitCloneOptionsSetSingleBranch(long long handle, int val);
extern char* GitCloneOptionsSetMirror(long long handle, int val);
extern char* GitCloneOptionsSetNoCheckout(long long handle, int val);
extern char* GitCloneOptionsSetDepth(long long handle, int val);
extern char* GitCloneOptionsSetBare(long long handle, int val);
extern char* GitCloneOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitCloneOptionsSetShared(long long handle, int val);
extern char* GitCloneOptionsSetTags(long long handle, int val);
extern void GitCloneOptionsFree(long long handle);
extern void GitCheckoutOptionsNew(long long* handleOut);
extern char* GitCheckoutOptionsSetHash(long long handle, char* val);
extern char* GitCheckoutOptionsSetBranch(long long handle, char* val);
extern char* GitCheckoutOptionsSetCreate(long long handle, int val);
extern char* GitCheckoutOptionsSetForce(long long handle, int val);
extern char* GitCheckoutOptionsSetKeep(long long handle, int val);
extern void GitCheckoutOptionsFree(long long handle);
extern void GitCommitOptionsNew(long long* handleOut);
extern char* GitCommitOptionsSetAll(long long handle, int val);
extern char* GitCommitOptionsSetAllowEmptyCommits(long long handle, int val);
extern char* GitCommitOptionsSetSigner(long long handle, long long signerHandle);
extern char* GitCommitOptionsSetAmend(long long handle, int val);
extern char* GitCommitOptionsSetAuthorNameEmail(long long handle, char* name, char* email);
extern char* GitCommitOptionsSetCommitterNameEmail(long long handle, char* name, char* email);
extern void GitAddOptionsNew(long long* handleOut);
extern char* GitAddOptionsSetAll(long long handle, int val);
extern char* GitAddOptionsSetPath(long long handle, char* val);
extern char* GitAddOptionsSetGlob(long long handle, char* val);
extern char* GitAddOptionsSetSkipStatus(long long handle, int val);
extern void GitAddOptionsFree(long long handle);
extern void GitCleanOptionsNew(long long* handleOut);
extern char* GitCleanOptionsSetDir(long long handle, int val);
extern void GitCleanOptionsFree(long long handle);
extern char* GitSignerNewPGP(char* armoredKey, char* passphrase, long long* handleOut);
extern void GitSignerFree(long long handle);
extern void GitSigningKeyFree(long long handle);
extern char* GitWorktreeStatus(long long wtHandle, char** jsonOut);
extern char* GitWorktreeReset(long long wtHandle, long long optsHandle);
extern char* GitWorktreeRestore(long long wtHandle, long long optsHandle);
extern char* GitWorktreeSubmodule(long long wtHandle, char* name, long long* handleOut);
extern char* GitWorktreeSubmodules(long long wtHandle, char** jsonOut);
extern void GitWorktreeFree(long long wtHandle);