dotnet/GoGit.Interop/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRemove(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRemoveGlob(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeReset(
        long wHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRestore(
        long wHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeStatus(
        long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodule(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodules(
        long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitWorktreeFree(long wHandle);

    // Auth constructors

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewBasicHTTP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string username,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewTokenHTTP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string token,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHKeyFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pemFile,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHKey(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pem,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHAgent(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthNewSSHPassword(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string user,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string password,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAuthFree(long handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthSetInsecureIgnoreHostKey(long handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthSetKnownHostsFiles(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filesJson);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAuthSetHostKeyCallback(long handle, IntPtr fn, IntPtr userData);

    // Signer constructors

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSignerNewPGP(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string armoredKey,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string passphrase,
        out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSignerFree(long handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSigningKeyFree(long handle);

    // Iterators

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitIterNext(
        long iterHandle,
        out IntPtr hashOut,
        out IntPtr msgOut,
        out IntPtr authorNameOut,
        out IntPtr authorEmailOut,
        out long tsOut,
        out int eofOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitIterFree(long iterHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitReferenceIterNext(
        long iterHandle,
        out IntPtr refNameOut,
        out IntPtr hashOut,
        out int eofOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitReferenceIterFree(long iterHandle);

    // AddOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAddOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetAll(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetPath(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetGlob(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitAddOptionsSetSkipStatus(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitAddOptionsFree(long handle);

    // CheckoutOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCheckoutOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetHash(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetBranch(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetCreate(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetForce(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetKeep(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCheckoutOptionsSetSparseCheckoutDirectories(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCheckoutOptionsFree(long handle);

    // CleanOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCleanOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCleanOptionsSetDir(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCleanOptionsFree(long handle);

    // CloneOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCloneOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetURL(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetAuth(long handle, long authHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetRemoteName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetReferenceName(long handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetSingleBranch(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetMirror(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetNoCheckout(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetDepth(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetRecurseSubmodules(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetShallowSubmodules(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetTags(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetInsecureSkipTLS(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetShared(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCloneOptionsSetBare(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCloneOptionsFree(long handle);

    // CommitOptions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitOptionsNew(out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAll(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAllowEmptyCommits(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetSigner(long handle, long signerHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAmend(long handle, int val);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetAuthorNameEmail(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string email);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitOptionsSetCommitterNameEmail(
        long handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string email);
